add media-767px in 2 blocks

--- a/src/index.html
+++ b/src/index.html
@@ -59,15 +59,15 @@
         <div class="container">
             <h2 class="advantage__subheader">НАШИ ПРЕИМУЩЕСТВА</h2>
 
-            <div class="advantage__icons">
+            <div class="d-visible advantage__icons">
                 <div class="advantage__icon">
                     <img src="icons/cup.svg" alt="cup">
                     <span class="advantage__title">Делимся опытом</span>
                     <span class="advantage__descr">
-                        Наши сотрудники всегда готовы
-                        поделиться своим опытом,
-                        так как сами бегают полумарафоны,
-                        переплыли Босфор, готовятся к
+                        Наши сотрудники всегда готовы<br>
+                        поделиться своим опытом,<br>
+                        так как сами бегают полумарафоны,<br>
+                        переплыли Босфор, готовятся к<br>
                         соревнованиям по триатлону!
                     </span>
                 </div>
@@ -75,9 +75,9 @@
                     <img src="icons/heart.svg" alt="heart">
                     <span class="advantage__title">Заботимся о здоровье</span>
                     <span class="advantage__descr">
-                        Мы работаем для того,
-                        чтобы Ваши занятия спортом шли на
-                        пользу Вашему здоровью и были в
+                        Мы работаем для того,<br>
+                        чтобы Ваши занятия спортом шли на<br>
+                        пользу Вашему здоровью и были в<br>
                         радость Вам и Вашим близким!
                     </span>
                 </div>
@@ -85,12 +85,50 @@
                     <img src="icons/shoe.svg" alt="shoe">
                     <span class="advantage__title">Учим бегать</span>
                     <span class="advantage__descr">
-                        Помогаем с обучением
-                        правильной технике бега!
-                        Дружим с крупнейшей школой бега в
+                        Помогаем с обучением<br>
+                        правильной технике бега!<br>
+                        Дружим с крупнейшей школой бега в<br>
                         России - <a class="advantage__href" href="#">I LOVE RUNNING.</a>
                     </span>
                 </div>
+            </div>
+
+            <div class="d-hidden advantage__icons">
+                <div class="advantage__icon">
+                    <img src="icons/cup.svg" alt="cup">
+                    <span class="advantage__title">Делимся опытом</span>
+                    <span class="advantage__descr">
+                        Наши сотрудники всегда готовы<br>
+                        поделиться своим опытом,<br>
+                        так как сами бегают полумарафоны,<br>
+                        переплыли Босфор, готовятся к<br>
+                        соревнованиям по триатлону!
+                    </span>
+                </div>
+            </div>
+            <div class="d-hidden advantage__icons">
+                <div class="advantage__icon">
+                    <img src="icons/heart.svg" alt="heart">
+                    <span class="advantage__title">Заботимся о здоровье</span>
+                    <span class="advantage__descr">
+                        Мы работаем для того,<br>
+                        чтобы Ваши занятия спортом шли на<br>
+                        пользу Вашему здоровью и были в<br>
+                        радость Вам и Вашим близким!
+                    </span>
+                </div>
+            </div>
+            <div class="d-hidden advantage__icons">
+               <div class="advantage__icon">
+                <img src="icons/shoe.svg" alt="shoe">
+                <span class="advantage__title">Учим бегать</span>
+                <span class="advantage__descr">
+                    Помогаем с обучением<br>
+                    правильной технике бега!<br>
+                    Дружим с крупнейшей школой бега в<br>
+                    России - <a class="advantage__href" href="#">I LOVE RUNNING.</a>
+                </span>
+            </div> 
             </div>
         </div>
     </div>
