add titles.scss, consultation.scss, forms.scss. Addnew section consultation in html and redone all project

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class="advantage">
         <div class="container">
-            <h2 class="advantage__subheader">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
 
             <div class="d-visible advantage__icons">
                 <div class="advantage__icon">
@@ -105,8 +105,6 @@
                         соревнованиям по триатлону!
                     </span>
                 </div>
-            </div>
-            <div class="d-hidden advantage__icons">
                 <div class="advantage__icon">
                     <img src="icons/heart.svg" alt="heart">
                     <span class="advantage__title">Заботимся о здоровье</span>
@@ -117,19 +115,36 @@
                         радость Вам и Вашим близким!
                     </span>
                 </div>
+                <div class="advantage__icon">
+                    <img src="icons/shoe.svg" alt="shoe">
+                    <span class="advantage__title">Учим бегать</span>
+                    <span class="advantage__descr">
+                        Помогаем с обучением<br>
+                        правильной технике бега!<br>
+                        Дружим с крупнейшей школой бега в<br>
+                        России - <a class="advantage__href" href="#">I LOVE RUNNING.</a>
+                    </span>
+                </div> 
             </div>
-            <div class="d-hidden advantage__icons">
-               <div class="advantage__icon">
-                <img src="icons/shoe.svg" alt="shoe">
-                <span class="advantage__title">Учим бегать</span>
-                <span class="advantage__descr">
-                    Помогаем с обучением<br>
-                    правильной технике бега!<br>
-                    Дружим с крупнейшей школой бега в<br>
-                    России - <a class="advantage__href" href="#">I LOVE RUNNING.</a>
-                </span>
-            </div> 
+        </div>
+    </div>
+    
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">
+                Получите бесплатную консультацию<br>
+                по подбору пульсометра 
+            </h2>
+            <div class="consultation__descr">
+                Просто заполните форму заявки<br>
+                и мы перезвоним вам в течении 10 минут
             </div>
+            <form class="feed-form" action="#">
+                    <input name="name" required type="text" placeholder="Ваше имя"> 
+                    <input name="phone" required type="number" placeholder="Ваш телефон"> 
+                    <input name="email" required type="email" placeholder="Ваше E-mail">
+                    <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
         </div>
     </div>
 </body>
