--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/blocks/style.min.css">
 </head>
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <header class="header">
                 <div class="header__logo">
@@ -54,8 +55,9 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="advantage">
+    </section>
+
+    <section class="advantage">
         <div class="container">
             <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
 
@@ -127,9 +129,9 @@
                 </div> 
             </div>
         </div>
-    </div>
+    </section>
     
-    <div class="consultation">
+    <section class="consultation">
         <div class="container">
             <h2 class="title title_left">
                 Получите бесплатную консультацию<br>
@@ -146,7 +148,27 @@
                     <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
         </div>
-    </div>
+    </section>
+
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div class="">
+                    <img src="img/slide_1.svg" alt="slide1">
+                </div>
+                <div class="">
+                    <img src="img/slide_2.svg" alt="slide2">
+                </div>
+                <div class="">
+                    <img src="img/slide_3.svg" alt="slide3">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
