the carousel is almost ready, done at 992px and 1920 resolution

--- a/src/index.html
+++ b/src/index.html
@@ -153,21 +153,21 @@
     <section class="carousel">
         <div class="container">
             <div class="carousel__inner">
-                <div class="">
+                <div>
                     <img src="img/slide_1.svg" alt="slide1">
                 </div>
-                <div class="">
+                <div class="container">
                     <img src="img/slide_2.svg" alt="slide2">
                 </div>
-                <div class="">
+                <div>
                     <img src="img/slide_3.svg" alt="slide3">
                 </div>
             </div>
         </div>
     </section>
 
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
