new sections reviews, map

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                     <span>Garmin, Polar, Suunto</span>
                 </div>
                 <div class="header__contacts">
-                    <a href="tel:+74999228974"class="header__phone">+7 (499) 922-89-74</a>
+                    <a href="tel:+74999228974"class="header__phone">+0 (000) 000-00-00</a>
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
@@ -647,6 +647,82 @@
                         </div>
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="reviews">
+        <div class="container">
+            <div class="title">
+                отзывы клиентов
+            </div>
+            <div class="reviews__review">
+                <div class="reviews__review-photo">
+                    <img src="icons/user.png" alt="user">
+                </div>
+                <div class="reviews-review-content">
+                    <div class="reviews__review-name">
+                        Крутой парень!
+                        <span>6015 полумарафонов</span>
+                    </div>
+                    <div class="reviews__review-descr">
+                        Мне всё не почем! Жёсткий парень я! Сегодня еще 15 полумарафонов пробежал!
+                        Ну короче говоря я флеш! Как открыл глаза на этом свете, ноги меня уже сами несли!
+                        Вот такой я! Жёсткий!
+                    </div>
+                </div>
+            </div>
+
+            <div class="reviews__review">
+                <div class="reviews__review-photo">
+                    <img src="icons/user.png" alt="user">
+                </div>
+                <div class="reviews-review-content">
+                    <div class="reviews__review-name">
+                        Крутой парень... 2!
+                        <span>2305 полумарафонов</span>
+                    </div>
+                    <div class="reviews__review-descr">
+                        Мне всё не почем! Жёсткий парень... 2 я! Сегодня еще 15 полумарафонов пробежал!
+                        Ну короче говоря я флеш! Как открыл глаза на этом свете, ноги меня уже сами несли!
+                        Вот такой я! Жёсткий!
+                    </div>
+                </div>
+            </div>
+
+            <div class="reviews__review">
+                <div class="reviews__review-photo">
+                    <img src="icons/user.png" alt="user">
+                </div>
+                <div class="reviews-review-content">
+                    <div class="reviews__review-name">
+                        Крутой парень..... 3!
+                        <span>8367 полумарафонов</span>
+                    </div>
+                    <div class="reviews__review-descr">
+                        Мне всё не почем! Жёсткий парень..... 3 я! Сегодня еще 15 полумарафонов пробежал!
+                        Ну короче говоря я флеш! Как открыл глаза на этом свете, ноги меня уже сами несли!
+                        Вот такой я! Жёсткий!
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="map">
+        <div class="container">
+            <div class="map__content">
+                <div class="map__content-street">
+                    *************************
+                </div>
+                <div class="map__content-number">
+                    0 (000) 000-00-00
+                </div>
+                <div class="map__content-social_networks">
+                    <img src="icons/facebook.svg" alt="facebook">
+                    <img src="icons/instagram.svg" alt="instagram">
+                    <img src="icons/pinterest.svg" alt="pinterest">
                 </div>
             </div>
         </div>
