maybe site verified, site done

--- a/src/index.html
+++ b/src/index.html
@@ -659,51 +659,57 @@
             </div>
             <div class="reviews__review">
                 <div class="reviews__review-photo">
-                    <img src="icons/user.png" alt="user">
+                    <img src="icons/user_1.png" alt="user">
                 </div>
                 <div class="reviews-review-content">
                     <div class="reviews__review-name">
-                        Крутой парень!
-                        <span>6015 полумарафонов</span>
+                        Эванс Гарри
+                        <span>11 полумарафонов</span>
                     </div>
                     <div class="reviews__review-descr">
-                        Мне всё не почем! Жёсткий парень я! Сегодня еще 15 полумарафонов пробежал!
-                        Ну короче говоря я флеш! Как открыл глаза на этом свете, ноги меня уже сами несли!
-                        Вот такой я! Жёсткий!
+                        Повар пригласил сегодня меня в ресторан, я поел там вкусную еду.
+                        После отдохнул и решил заняться бегом, пробежел 2 полумарафона. Пульсометр хорош!
+                        Раньше я особо не бегал, так... пробежаться. Но этот пульсометр даёт отличные ощущения!
+                        Бегать одно удовольствие. Он в добавок прочный, падал у меня парочку раз, но он даже не поцарапался.
+                        В пульсометре расписанна вся статистика твоего бега. Отличный выбор!
                     </div>
                 </div>
             </div>
 
             <div class="reviews__review">
                 <div class="reviews__review-photo">
-                    <img src="icons/user.png" alt="user">
+                    <img src="icons/user_2.png" alt="user">
                 </div>
                 <div class="reviews-review-content">
                     <div class="reviews__review-name">
-                        Крутой парень... 2!
-                        <span>2305 полумарафонов</span>
+                        Бекер Уильям
+                        <span>12 полумарафонов</span>
                     </div>
                     <div class="reviews__review-descr">
-                        Мне всё не почем! Жёсткий парень... 2 я! Сегодня еще 15 полумарафонов пробежал!
-                        Ну короче говоря я флеш! Как открыл глаза на этом свете, ноги меня уже сами несли!
-                        Вот такой я! Жёсткий!
+                        Повар пригласил сегодня меня в ресторан, я поел там вкусную еду.
+                        После отдохнул и решил заняться бегом, пробежел 2 полумарафона. Пульсометр хорош!
+                        Раньше я особо не бегал, так... пробежаться. Но этот пульсометр даёт отличные ощущения!
+                        Бегать одно удовольствие. Он в добавок прочный, падал у меня парочку раз, но он даже не поцарапался.
+                        В пульсометре расписанна вся статистика твоего бега. Отличный выбор!
                     </div>
                 </div>
             </div>
 
             <div class="reviews__review">
                 <div class="reviews__review-photo">
-                    <img src="icons/user.png" alt="user">
+                    <img src="icons/user_3.png" alt="user">
                 </div>
                 <div class="reviews-review-content">
                     <div class="reviews__review-name">
-                        Крутой парень..... 3!
-                        <span>8367 полумарафонов</span>
+                        Мр. Чхве
+                        <span>16 полумарафонов</span>
                     </div>
                     <div class="reviews__review-descr">
-                        Мне всё не почем! Жёсткий парень..... 3 я! Сегодня еще 15 полумарафонов пробежал!
-                        Ну короче говоря я флеш! Как открыл глаза на этом свете, ноги меня уже сами несли!
-                        Вот такой я! Жёсткий!
+                        Повар пригласил сегодня меня в ресторан, я поел там вкусную еду.
+                        После отдохнул и решил заняться бегом, пробежел 2 полумарафона. Пульсометр хорош!
+                        Раньше я особо не бегал, так... пробежаться. Но этот пульсометр даёт отличные ощущения!
+                        Бегать одно удовольствие. Он в добавок прочный, падал у меня парочку раз, но он даже не поцарапался.
+                        В пульсометре расписанна вся статистика твоего бега. Отличный выбор!
                     </div>
                 </div>
             </div>
@@ -720,9 +726,9 @@
                     0 (000) 000-00-00
                 </div>
                 <div class="map__content-social_networks">
-                    <img src="icons/facebook.svg" alt="facebook">
-                    <img src="icons/instagram.svg" alt="instagram">
-                    <img src="icons/pinterest.svg" alt="pinterest">
+                    <a href="#"><img src="icons/facebook.svg" alt="facebook"></a>
+                    <a href="#"><img src="icons/instagram.svg" alt="instagram"></a>
+                    <a href="#"><img src="icons/pinterest.svg" alt="pinterest"></a>
                 </div>
             </div>
         </div>
