--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="header__contacts">
                     <a href="tel:+74999228974"class="header__phone">+0 (000) 000-00-00</a>
-                    <button class="button">заказать звонок</button>
+                    <button class="button" data-modal="consultation">заказать звонок</button>
                 </div>
             </header>
             <div class="promo__wrapper">
@@ -48,7 +48,7 @@
                     </div>
                 </div>
 
-                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <button class="button button_main" data-modal="consultation">заказать кОНСУЛЬТАЦИЮ</button>
                 <div class="promo__link">
                     или
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -717,22 +717,56 @@
     </section>
 
     <section class="map">
-        <div class="container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7979.178164796813!2d73.09476932009886!3d-0.6141951781450916!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x24b59fb0efff75b3%3A0xe54e3cab1c7dcbdc!2zUGFwYeKAmXMgQmlzdHJv!5e0!3m2!1sru!2sua!4v1695369220966!5m2!1sru!2sua" width="100%" z-index="-1" height="630px" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div class="map__content">
-                <div class="map__content-street">
+                <address class="map__content-street">
                     *************************
-                </div>
-                <div class="map__content-number">
+                </address>
+                <a href="tel:00000000000" class="map__content-number">
                     0 (000) 000-00-00
-                </div>
+                </a>
                 <div class="map__content-social_networks">
                     <a href="#"><img src="icons/facebook.svg" alt="facebook"></a>
                     <a href="#"><img src="icons/instagram.svg" alt="instagram"></a>
                     <a href="#"><img src="icons/pinterest.svg" alt="pinterest"></a>
                 </div>
             </div>
-        </div>
     </section>
+
+    <div class="overlay">
+        <div class="modal" id="consultation">
+            <div class="modal__close" id="modal__close">&times;</div>
+            <div class="modal__subtitle">Просто заполните форму заявки</div>
+            <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form feed-form_mt25" action="#">
+                <input name="name" required type="text" placeholder="Ваше имя"> 
+                <input name="phone" required type="number" placeholder="Ваш телефон"> 
+                <input name="email" required type="email" placeholder="Ваше E-mail">
+                <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
+        </div>
+        
+        <div class="modal" id="order">
+            <div class="modal__close" id="modal__close">&times;</div>
+            <div class="modal__subtitle">Ваш заказ:</div>
+            <div class="modal__descr">Пульсометр Polar FT1</div>
+            <form class="feed-form feed-form_mt25" action="#">
+                <input name="name" required type="text" placeholder="Ваше имя"> 
+                <input name="phone" required type="number" placeholder="Ваш телефон"> 
+                <input name="email" required type="email" placeholder="Ваше E-mail">
+                <button class="button button_submit">купить</button>
+            </form>
+        </div>
+
+        <div class="modal modal_mini" id="thanks">
+            <div class="modal__close" id="modal__close">&times;</div>
+            <div class="modal__subtitle">Спасибо за вашу заявку!</div>
+            <div class="modal__descr">
+                Наш менеджер свяжется с вами 
+                в ближайшее время!
+            </div>
+        </div>
+    </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
