Validate is done!

--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,7 @@
             </div>
             <form id="consultation-form" class="feed-form" action="#">
                     <input name="name" type="text" placeholder="Ваше имя"> 
-                    <input name="phone" type="number" placeholder="Ваш номер телефона"> 
+                    <input name="phone" placeholder="Ваш номер телефона"> 
                     <input name="email" type="email" placeholder="Ваш E-mail">
                     <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
@@ -740,7 +740,7 @@
             <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name" type="text" placeholder="Ваше имя"> 
-                <input name="phone" type="number" placeholder="Ваш номер телефона"> 
+                <input name="phone" placeholder="Ваш номер телефона"> 
                 <input name="email" type="email" placeholder="Ваш E-mail">
                 <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
@@ -752,7 +752,7 @@
             <div class="modal__descr">Пульсометр Polar FT1</div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name" type="text" placeholder="Ваше имя"> 
-                <input name="phone" type="number" placeholder="Ваш номер телефона"> 
+                <input name="phone" placeholder="Ваш номер телефона"> 
                 <input name="email" type="email" placeholder="Ваш E-mail">
                 <button class="button button_submit">купить</button>
             </form>
@@ -772,6 +772,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
